--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,14 +8,75 @@
 
 html{
     font-family: Arial, Helvetica, sans-serif;
+    color:white;
 }
 
 img{
     max-width:100%;
 }
 
+a{
+    color:white;
+    text-decoration:none;
+}
+
 /* Generale */
 
 .flex {
     display:flex;
+    flex-wrap:wrap;
+}
+
+.relative{
+    position:relative;
+}
+
+.button{
+    background-color: #4A4A4A;
+    padding:5px;
+    margin:10px 3px;
+    border-radius:5px;
+}
+
+/* Main */
+
+main{
+    background-color:black;
+}
+
+main .video-container{
+    height:calc(100vh - 100px);
+    padding:40px;
+    padding-top:80px;
+    overflow:auto;
+}
+
+main .profile{
+    margin:10px;
+    width:240px;
+    height:140px;
+    background-image:url("https://picsum.photos/id/200/300");
+    background-size:cover;
+    background-position:center;
+}
+
+main .username {
+    position:absolute;
+    background-color:rgba(0,0,0,0.45);
+    bottom:0;
+    left:0;
+    padding:5px;
+}
+
+main .video-settings{
+    position:absolute;
+    top:0;
+    right:20px;
+}
+
+/* Footer */
+
+footer{
+    min-height:100px;
+    background-color: #222222;
 }
