--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,17 @@ a{
     border-radius:5px;
 }
 
+.my-row1-6{
+    width:calc(100% / 6);
+}
+
+.my-row2-3{
+    width:calc((100% / 3) * 2);
+}
+
+.green{
+    color:#4BC800;
+}
 /* Main */
 
 main{
@@ -45,7 +56,7 @@ main{
 }
 
 main .video-container{
-    height:calc(100vh - 100px);
+    height:calc(100vh - 80px);
     padding:40px;
     padding-top:80px;
     overflow:auto;
@@ -77,6 +88,27 @@ main .video-settings{
 /* Footer */
 
 footer{
-    min-height:100px;
+    min-height:80px;
     background-color: #222222;
+}
+
+footer ul {
+    list-style-type: none;
+}
+
+footer .my-row2-3 ul {
+    justify-content:center;
+}
+
+footer .my-row2-3 ul li {
+    padding-top:15px;
+    padding-bottom:5px;
+    font-size:30px;
+    text-align:center;
+    margin-left:15px;
+    margin-right:15px;
+}
+footer .my-row2-3 ul li p,
+footer .small{
+    font-size:15px;
 }
